manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-add-app-deployment
spec:
  replicas: 2
  selector: 
    matchLabels:
      type: add-pod
  template:
    metadata:
      labels: 
        type: add-pod
    spec:
       containers:
        - name: add-con
          image: aksacr.azurecr.io/add-task-todo:v1
          ports:
           - containerPort: 8000
