manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: addtask-service
spec:
  selector:
    type: add-pod
  ports:
   - port: 80
     targetPort: 8000
  type: ClusterIP
